--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>The Ternary Traveler</h1>
+    <div id="poi-form__div"></div>
     <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
