review form dynamically created when edit review button is clicked, patch method used to update record

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>The Ternary Traveler</h1>
     <div id="poi-form__div"></div>
+    <div id="poi-review__placeholder"></div>
     <div id="poi-list__div"></div>
     <script src="scripts/main.js" type="module"></script>
 </body>
