initial styling complete

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <h1>The Ternary Traveler</h1>
     <div id="poi-form__div"></div>
     <div id="poi-review__placeholder"></div>
+    <h2>Point of Interest List</h2>
     <div id="poi-list__div"></div>
     <script src="scripts/main.js" type="module"></script>
 </body>
